--- a/en/resumeEN.html
+++ b/en/resumeEN.html
@@ -44,6 +44,9 @@
           </p>
           <h2>Social networks:</h2>
           <p><a href="vk.com/id49098018">Vkonatkte</a></p>
+          <h2>Other projects</h2>
+          <p><a href="https://github.com/andreyarnapolin/dz2.1">dz2.1</a></p>
+          <p><a href="https://github.com/andreyarnapolin/dz2.2">dz2.2</a></p>
         </div>
       </article>
     </main>
